<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/flightlist"
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_below="@id/flightlist"
        app:cardBackgroundColor="@color/white" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/icon_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"


                app:srcCompat="@drawable/ic_group_black_24dp"
                android:contentDescription="@string/person" />

            <TextView
                android:id="@+id/city1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/flightType"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textSize="14sp"
                android:textStyle="normal"
                android:typeface="serif" />

            <ImageView
                android:id="@+id/icon_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="end"
                app:srcCompat="@drawable/ic_unfold_more_black_24dp"
                android:contentDescription="@string/flightType_list" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <Button

        android:id="@+id/button"
        style="@style/searchButton"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="302dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginRight="-1dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</RelativeLayout>